# Python_Piscine

./: README.md
Python_Module_00/: README.md
Python_Module_00/ex1/: ft_plot_area.py
Python_Module_00/ex2/: ft_harvest_total.py
Python_Module_00/ex3/: ft_plant_age.py
Python_Module_00/ex4/: ft_water_reminder.py
Python_Module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python_Module_00/ex6/: ft_garden_summary.py
Python_Module_00/ex7/: ft_seed_inventory.py
Python_Module_01/: README.md
Python_Module_01/ex0/: ft_garden_intro.py
Python_Module_01/ex1/: ft_garden_data.py
Python_Module_01/ex2/: ft_plant_growth.py
Python_Module_01/ex3/: ft_plant_factory.py
Python_Module_01/ex4/: ft_garden_security.py
Python_Module_01/ex5/: ft_plant_types.py
Python_Module_01/ex6/: ft_garden_analytics.py
Python_Module_02/: README.md
Python_Module_02/ex0/: ft_first_exception.py
Python_Module_02/ex1/: ft_different_errors.py
Python_Module_02/ex2/: ft_custom_errors.py
Python_Module_02/ex3/: ft_finally_block.py
Python_Module_02/ex4/: ft_raise_errors.py
Python_Module_02/ex5/: ft_garden_management.py
Python_Module_03/: README.md
Python_Module_04/: README.md
Python_Module_05/: README.md
Python_Module_06/: README.md  ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_Module_07/: README.md
Python_Module_08/: README.md
Python_Module_08/ex1/: loading.py  pyproject.toml  requirements.txt
Python_Module_09/: README.md
Python_Module_10/: README.md  decorator.py
(+56 files in other folders)
