[project]
name = "py08"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdelfatah Laktaoui",email = "abdalfattahlaktaoui98@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "importlib (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
